# AircraftsFinder

./: CMakeLists.txt  MathLib.h  README.md  SLSearch.cpp  SLSearch.h  aircraftApp.cpp  aircraftDetection.cpp  aircraftDetection.h  baseIO.cpp  baseIO.h  genShpIMG.cpp  genShpIMg.h
